--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.devlan.androlite"
+        applicationId "com.andromob.androlite"
         minSdkVersion 17
         targetSdkVersion 29
         versionCode 1
@@ -22,7 +22,7 @@ android {
     android {
         defaultConfig {
             manifestPlaceholders = [
-                    onesignal_app_id : '71f26876-c1aa-43f5-9604-06181b61c13e',//replace your onsignal app_id  Here
+                    onesignal_app_id : 'a92c15c0-1702-4c4a-b6be-e78b5f9c703c',//replace your onsignal app_id  Here
                     // Project number pulled from dashboard, local value is ignored.
                     onesignal_google_project_number: 'REMOTE'
             ]
