--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.devlan.wcf"
+        applicationId "inc.devlan.wcf"
         minSdkVersion 17
         targetSdkVersion 29
         versionCode 1
