--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "com.devlan.webview"
+        applicationId "com.devlan.universalwebview"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 4
