--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.devlan.universalwebview">
+    package="com.andromob.webview">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name="com.devlan.universalwebview.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
@@ -19,9 +19,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name="com.devlan.universalwebview.Privacy_Policy" />
-        <activity android:name="com.devlan.universalwebview.AboutActivity" />
-        <activity android:name="com.devlan.universalwebview.SplashActivity"
+        <activity android:name=".Privacy_Policy" />
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".SplashActivity"
             android:theme="@style/AppTheme.NoActionBar2"
             >
             <intent-filter>
@@ -31,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.devlan.universalwebview.MainActivity"
+            android:name=".MainActivity"
             android:configChanges="screenSize|orientation"
             android:theme="@style/AppTheme.NoActionBar" />
 
