--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
+        android:hardwareAccelerated="true"
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@drawable/logo"
@@ -16,7 +17,6 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
 
         <activity android:name=".SplashActivity">
             <intent-filter>
