--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:hardwareAccelerated="true"
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
-        android:icon="@mipmap/logo"
+        android:icon="@mipmap/launcher_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/wcf_logo"
+        android:roundIcon="@mipmap/launcher_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
